src/app/component/snapshots/jedit__app__component__preview__test__render_empty_test.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState::default())"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                             Preview not available                            │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
