src/app/component/snapshots/jedit__app__component__preview__test__render_long_line_test-3.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState\n{ x_offset, y_offset: 0 })"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123456789  │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│4567890123456789012345678901234567890123456789012345678901234567890123        │"
"│                                                                              │"
"│←════████████████████████████████████████████████████████████████████████████→│"
"└──────────────────────────────────────────────────────────────────────────────┘"
