src/app/component/snapshots/jedit__app__component__preview__test__render_long_line_test-4.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState::default())"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│012345678901234567890123456789012345678901234567890123456789012345678901234   │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
