src/app/component/snapshots/jedit__app__component__preview__test__render_short_test-2.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState\n{ x_offset: 0, y_offset, })"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│  1 1                                                                        ↑│"
"│  2 2                                                                        █│"
"│  3 3                                                                        █│"
"│  4 4                                                                        █│"
"│  5 5                                                                        █│"
"│  6 6                                                                        █│"
"│  7 7                                                                        █│"
"│  8 8                                                                        █│"
"│  9 9                                                                        █│"
"│ 10 10                                                                       █│"
"│ 11 11                                                                       █│"
"│ 12 12                                                                       █│"
"│ 13 13                                                                       █│"
"│ 14 14                                                                       ║│"
"│ 15 15                                                                       ║│"
"│ 16 16                                                                       ║│"
"│                                                                             ↓│"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
