src/app/component/snapshots/jedit__app__component__preview__test__render_short_test-3.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState\n{ x_offset: 0, y_offset, })"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│3                                                                            ↑│"
"│4                                                                            ║│"
"│5                                                                            █│"
"│6                                                                            █│"
"│7                                                                            █│"
"│8                                                                            █│"
"│9                                                                            █│"
"│10                                                                           █│"
"│11                                                                           █│"
"│12                                                                           █│"
"│13                                                                           █│"
"│14                                                                           █│"
"│15                                                                           █│"
"│16                                                                           █│"
"│17                                                                           █│"
"│18                                                                           █│"
"│                                                                             ║│"
"│                                                                             ↓│"
"└──────────────────────────────────────────────────────────────────────────────┘"
