src/app/component/snapshots/jedit__app__component__preview__test__render_short_test.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut PreviewState::default())"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│1                                                                             │"
"│2                                                                             │"
"│3                                                                             │"
"│4                                                                             │"
"│5                                                                             │"
"│6                                                                             │"
"│7                                                                             │"
"│8                                                                             │"
"│9                                                                             │"
"│10                                                                            │"
"│11                                                                            │"
"│12                                                                            │"
"│13                                                                            │"
"│14                                                                            │"
"│15                                                                            │"
"│16                                                                            │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
