src/app/component/snapshots/jedit__app__component__preview__test__render_test-2.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│          "configGlossary:poweredByIcon": "/images/cofax.gif",               ↑│"
"│          "configGlossary:staticPath": "/content/static",                    ║│"
"│          "templateProcessorClass": "org.cofax.WysiwygTemplate",             ║│"
"│          "templateLoaderClass": "org.cofax.FilesTemplateLoader",            █│"
"│          "templatePath": "templates",                                       █│"
"│          "templateOverridePath": "",                                        ║│"
"│          "defaultListTemplate": "listTemplate.htm",                         ║│"
"│          "defaultFileTemplate": "articleTemplate.htm",                      ║│"
"│          "useJSP": false,                                                   ║│"
"│          "jspListTemplate": "listTemplate.jsp",                             ║│"
"│          "jspFileTemplate": "articleTemplate.jsp",                          ║│"
"│          "cachePackageTagsTrack": 200,                                      ║│"
"│          "cachePackageTagsStore": 200,                                      ║│"
"│          "cachePackageTagsRefresh": 60,                                     ║│"
"│          "cacheTemplatesTrack": 100,                                        ║│"
"│          "cacheTemplatesStore": 50,                                         ║│"
"│                                                                             ║│"
"│←██████████████████████████████████████████████████████████████████══════════→│"
"└──────────────────────────────────────────────────────────────────────────────┘"
