src/app/component/snapshots/jedit__app__component__preview__test__render_test-3.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│          "cachePagesDirtyRead": 10,                                         ↑│"
"│          "searchEngineListTemplate": "forSearchEnginesList.htm",            ║│"
"│          "searchEngineFileTemplate": "forSearchEngines.htm",                ║│"
"│          "searchEngineRobotsDb": "WEB-INF/robots.db",                       ║│"
"│          "useDataStore": true,                                              ║│"
"│          "dataStoreClass": "org.cofax.SqlDataStore",                        ║│"
"│          "redirectionClass": "org.cofax.SqlRedirection",                    █│"
"│          "dataStoreName": "cofax",                                          █│"
"│          "dataStoreDriver": "com.microsoft.jdbc.sqlserver.SQLServerDriver", █│"
"│          "dataStoreUrl": "jdbc:microsoft:sqlserver://LOCALHOST:1433;Databas ║│"
"│          "dataStoreUser": "sa",                                             ║│"
"│          "dataStorePassword": "dataStoreTestQuery",                         ║│"
"│          "dataStoreTestQuery": "SET NOCOUNT ON;select test='test';",        ║│"
"│          "dataStoreLogFile": "/usr/local/tomcat/logs/datastore.log",        ║│"
"│          "dataStoreInitConns": 10,                                          ║│"
"│          "dataStoreMaxConns": 100,                                          ║│"
"│                                                                             ║│"
"│←██████████████████████████████████████████████████████████████████══════════→│"
"└──────────────────────────────────────────────────────────────────────────────┘"
