src/app/component/snapshots/jedit__app__component__preview__test__render_test-4.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│      },                                                                     ↑│"
"│      {                                                                      ║│"
"│        "servlet-name": "cofaxEmail",                                        ║│"
"│        "servlet-class": "org.cofax.cds.EmailServlet",                       ║│"
"│        "init-param": {                                                      ║│"
"│          "mailHost": "mail1",                                               ║│"
"│          "mailHostOverride": "mail2"                                        ║│"
"│        }                                                                    ║│"
"│      },                                                                     █│"
"│      {                                                                      █│"
"│        "servlet-name": "cofaxAdmin",                                        █│"
"│        "servlet-class": "org.cofax.cds.AdminServlet"                        ║│"
"│      },                                                                     ║│"
"│      {                                                                      ║│"
"│        "servlet-name": "fileServlet",                                       ║│"
"│        "servlet-class": "org.cofax.cds.FileServlet"                         ║│"
"│                                                                             ↓│"
"│←█████████████████████████████████████████████████████████████████══════════→ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
